# Org

./: Cargo.toml  Dockerfile  Dockerfile-tests  README.md
.cargo/: config.toml
.github/workflows/: build-and-publish.yml  security-audit.yml
src/: error.rs  hash.rs  main.rs  microsoft.rs  redis_data.rs  secrets.rs
src/microsoft/: data.rs  graph_client.rs  mod.rs
static/: index.html  ledger-empty.xlsx  login.html
