[package]
name = "org"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1.6"
rocket = "0.5.0-rc.1"
chrono = "0.4.19"
reqwest = { version = "0.11.8", features = ["json", "rustls-tls", "gzip"], default-features = false }