[package]
name = "org"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
csv = "1.1.6"
rocket = "0.5.0-rc.1"
chrono = "0.4.19"
reqwest = { version = "0.11.9", features = ["json", "rustls-tls", "gzip"], default-features = false }
redis = "0.21.5"
ring = "0.16.20"